# ash-williams

./: .gitignore  README.md  notes.md  notes.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-check-pip.yml  python-package.yml  python-publish-manual.yml  python-publish.yml  python-test.yml
ash/: __init__.py  __main__.py  ash.py  cli.py  config.py  doi.py  main.py
ash/online/: app.py
ash/online/templates/: upload.html
examples/: ash.ipynb  ash_demo.ipynb  mock_demo.py
test/: conftest.py  test_ash.py  test_cli.py  test_doi.py  test_mimes.py  test_minimal_docs.py  test_paper.py  test_pdf_vault.py  test_vault.py
test/mock/: rw_database.csv
typings/striprtf/: striprtf.pyi
